--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello  World!</h1>
     <p>This is my first Website and  i am taking a little step  towards Developing....</p>
     <p>My Goal is to become a Python developer and try hard in the next few month to achive it .</p>
+    <p>Today's i am learning CSS styling </p>
     
 </body>
 </html>
